# sudoku_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: board.h  ga_solver.h  generator.h  menu.h  save_load.h
src/: board.c  ga_solver.c  generator.c  main.c  menu.c  save_load.c
